force-app/main/default/objects/Container__c/fields/It_ll_be_carried_at__c.field-meta.xml
<CustomField>
    <fullName>It_ll_be_carried_at__c</fullName>
    <label>It&apos;ll be carried at</label>
    <type>DateTime</type>
</CustomField>