force-app/main/default/objects/Container__c/fields/Moby_Client__c.field-meta.xml
<CustomField>
    <fullName>Moby_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moby - Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipName>Moby_Containers</relationshipName>
    <type>Lookup</type>
</CustomField>