force-app/main/default/objects/Container__c/fields/Transportation_Counter__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Counter__c</fullName>
    <label>Transportation Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>