force-app/main/default/objects/Container__c/fields/W__c.field-meta.xml
<CustomField>
    <fullName>W__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>