force-app/main/default/objects/Container__c/validationRules/Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval</fullName>
    <active>false</active>
    <errorConditionFormula>Transportation_Counter__c  &gt;= 6</errorConditionFormula>
    <errorMessage>Container transported 5 times. The approval process is required.</errorMessage>
</ValidationRule>